--- a/src/screens/Home/Home.module.scss
+++ b/src/screens/Home/Home.module.scss
@@ -38,11 +38,16 @@
   color: white;
   margin: 0 20px;
   font-size: 22px;
+  -webkit-box-shadow: 2px 2px 12px 0px rgba(203, 204, 208, 1);
+  -moz-box-shadow: 2px 2px 12px 0px rgba(203, 204, 208, 1);
+  box-shadow: 2px 2px 12px 0px rgba(203, 204, 208, 1);
 }
 
 .row {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .container{
@@ -50,7 +55,12 @@
   height: 100px;
   display: flex;
   justify-content: center;
-  margin: 50px 0 0 0;
+  align-items: center;
+  padding-left: 30px;
+  & img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .description {
@@ -59,4 +69,5 @@
   color: #4D4D4D;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
