--- a/src/screens/FoundCity/FoundCity.module.scss
+++ b/src/screens/FoundCity/FoundCity.module.scss
@@ -1,7 +1,11 @@
 .row {
   display: flex;
   justify-content: center;
-  //width: 500px;
+  & img {
+    padding-left: 30px;
+    height: 150px;
+    width: 150px;
+  }
 }
 
 .text {
@@ -17,10 +21,8 @@
 }
 
 .photoContainer {
-  //border-right-color: #707070;
   border-right: 1px #707070 solid;
   width: 100%;
-  height: 500px;
 }
 
 .background {
