--- a/src/screens/Home/Home.module.scss
+++ b/src/screens/Home/Home.module.scss
@@ -1,7 +1,7 @@
 .stripe {
   width: 100%;
   height: 180px;
-  background-image: url("../../images/sky.png");
+  background-image: url("../../images/skyStripe.png");
 
 }
 
